# trend-lab-trendshield-github-scam-scanner-260625

./: README.md  pyproject.toml
src/trendshield_github_scam_scanner/: main.py
